new tests were added and the recommendation controller was refactored